# fbcunn

./: .dokx  .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  LICENSE  PATENTS  README.md  TemporalMaxPooling.cu  docs.sh  index.html  init.cu
_markdown/fbcunn/: INSTALL.md  README.md  examples+imagenet+data.md  examples+imagenet+dataset.md  examples+imagenet+donkey.md  examples+imagenet+main.md  examples+imagenet+model.md  examples+imagenet+models+alexnetowt_cudnn.md  examples+imagenet+opts.md  examples+imagenet+train.md  examples+imagenet+util.md  fbcunn+AbstractParallel.md  fbcunn+CuBLASWrapper.md  fbcunn+DataParallel.md  fbcunn+FFTWrapper.md  fbcunn+FeatureLPPooling.md  fbcunn+HalfPrecision.md  fbcunn+LookupTableGPU.md  fbcunn+ModelParallel.md  fbcunn+OneBitDataParallel.md  fbcunn+OneBitQuantization.md  fbcunn+OneBitSGD.md  fbcunn+SpatialConvolutionCuFFT.md  fbcunn+TemporalConvolutionFB.md  fbcunn+TemporalKMaxPooling.md
cmake/: FindGlog.cmake  FindTHPP.cmake  MultiLevelIncludes.cmake
examples/imagenet/: README.md  data.lua  dataset.lua  donkey.lua  main.lua  model.lua  opts.lua  test.lua  train.lua  util.lua
fbcunn/: AbstractParallel.lua  BatchNormalization.lua  CuBLASWrapper.lua  DataParallel.lua  FFTCDefs.lua  FFTWrapper.lua  FeatureLPPooling.lua  LookupTableGPU.lua  ModelParallel.lua  OneBitDataParallel.lua  OneBitSGD.lua  SpatialBatchNormalization.lua  SpatialConvolution.lua  SpatialConvolutionCuFFT.lua  SpatialConvolutionFBFFT.lua  SpatialConvolutionFBFFTGemm.lua  SpatialConvolutionFFT.lua  SpatialConvolutionFFTTiled.lua  SpatialConvolutionFFTTiledAsync.lua  SpatialConvolutionFFTTiledIterated.lua  SpatialConvolutionFFTTiledSync.lua  TemporalConvolutionFB.lua  TemporalKMaxPooling.lua  examples+imagenet+data.html  examples+imagenet+dataset.html  examples+imagenet+donkey.html  examples+imagenet+main.html  examples+imagenet+model.html  examples+imagenet+models+alexnet_fbcunn.html  examples+imagenet+opts.html  examples+imagenet+train.html  examples+imagenet+util.html  fbcunn+AbstractParallel.html  fbcunn+CuBLASWrapper.html  fbcunn+DataParallel.html  fbcunn+FFTWrapper.html  fbcunn+FeatureLPPooling.html  fbcunn+HalfPrecision.html  fbcunn+LookupTableGPU.html  fbcunn+ModelParallel.html  (+8 more)
fbcunn/extra/: INSTALL.html  README.html
layers/: ClassHierarchicalNLLCriterion.lua  CrossMapNormalization.lua  GroupKMaxPooling.lua  HSM.lua  Includes.h  LinearNB.lua  LocallyConnected.lua  LookupTableGPU.lua  SequentialCriterion.lua  SparseConverter.lua  SparseKmax.lua  SparseLookupTable.lua  SparseNLLCriterion.lua  SparseSum.lua  SparseThreshold.lua  Tensor.h  WeightedLookupTable.lua  nn_layers.lua
layers/cpu/: Blas.h  GroupKMaxPooling.cpp  HSM.cpp  InitCPU.cpp  SparseNLLCriterion.cpp  init.lua
layers/cuda/: BLASParameters.cpp  BLASParameters.h  CrossMapNormalization.cu  CrossMapNormalization.cuh  CrossMapNormalizationHost.cpp  CuBLASWrapper.cpp  CuBLASWrapper.h  CuBLASWrapperLua.cpp  CudaTensorUtils.cpp  DeviceTensorUtils.h  FeatureLPPooling.cu  FeatureLPPooling.cuh  FeatureLPPooling.lua  FeatureLPPoolingHost.cpp  HalfPrec.cpp  HalfPrecKernels.cu  HalfPrecTest.cpp  InitCuda.cpp  LookupTableGPU.cu  LookupTableGPUHost.cpp  OneBitQuantization.cu  OneBitQuantization.lua  OneBitQuantizationHost.cpp  SparseNLLCriterion.cu  SparseNLLCriterionHost.cpp  TemporalConvolutionFBHost.cpp  TemporalKMaxPooling.cu  TemporalKMaxPooling.cuh  TemporalKMaxPoolingHost.cpp  init.lua
layers/test/: ConvolutionTest.cpp  CuBLASTest.cpp  FFTTest.cpp  FeatureLPPoolingTest.lua  InputCentricConvolution_UpdateOutput.cu  InputCentricConvolution_UpdateOutput.cuh  OneBitQuantizationTest.lua  ReferenceConvolutions.cpp  TemporalKMaxPoolingTest.lua  TestTemporalConvolutionFB.lua  TestUtils.h  TestWeightedLookupTable.lua  benchmark_cublas.lua  benchmark_fft.lua  test_ClassHierarchicalNLLCriterion.lua  test_HSM.lua  test_HSM_cuda.lua  test_HSM_speed.lua  test_LinearNB.lua  (+5 more)
luasrc/: AbstractParallel.lua  ClassHierarchicalNLLCriterion.lua  DataParallel.lua  FFTWrapper.lua  HSM.lua  HalfPrecision.lua  KMaxPooling.lua  LocallyConnected.lua  LookupTableGPU.lua  ModelParallel.lua  OneBitDataParallel.lua  OneBitSGD.lua  SparseKmax.lua  SparseNLLCriterion.lua  SparseSum.lua  SparseThreshold.lua  SpatialConvolutionCuFFT.lua  TemporalKMaxPooling.lua  init.lua  testbug.lua
rocks/: fbcunn-scm-1.rockspec
src/: BLASParameters.cpp  BLASParameters.h  BatchNormalization.cu  ConvolutionBias.cu  ConvolutionBias.cuh  CrossMapNormalization.cu  CrossMapNormalization.cuh  CrossMapNormalizationHost.cpp  CuBLASWrapper.cpp  CuBLASWrapper.h  CuBLASWrapperLua.cpp  CudaTensorUtils.cpp  CudaTensorUtils.h  DeviceTensorUtils-inl.h  DeviceTensorUtils.h  FeatureLPPooling.cu  FeatureLPPooling.cuh  FeatureLPPoolingHost.cpp  HSM.cu  HSMHost.cpp  HalfPrec.cpp  HalfPrec.h  HalfPrecKernels.cu  HalfPrecTest.cpp  InitCuda.cpp  LocallyConnected.cuh  LocallyConnectedAccGradParameters.cu  LocallyConnectedHost.cpp  LocallyConnectedUpdateGradInput.cu  LocallyConnectedUpdateOutput.cu  LookupTableGPU.cu  LookupTableGPUHost.cpp  LuaUtils.h  MM.cu  MM.h  OneBitQuantization.cu  OneBitQuantization.cuh  OneBitQuantizationHost.cpp  SparseNLLCriterion.cu  SparseNLLCriterion.cuh  (+15 more)
test/: BiasTest.cpp  ConvolutionTest.cpp  CuBLASTest.cpp  CudaTensorTest.cpp  CudaTensorTestKernels.cu  CudaTensorTestKernels.cuh  FFTTest.cpp  InputCentricConvolution_UpdateOutput.cu  InputCentricConvolution_UpdateOutput.cuh  README.md  ReferenceConvolutions.cpp  ReferenceConvolutions.h  TestUtils.cpp  TestUtils.h  benchmark_cublas.lua  benchmark_fft.lua  fb_test.lua  run_test_HSM_seed.sh  test.lua  test_BatchNormalization.lua  test_ClassHierarchicalNLLCriterion.lua  test_CuBLAS.lua  test_CuFFT.lua  test_DataParallel.lua  test_DataParallelComprehensive.lua  test_FBFFTTiling.lua  test_FFT.lua  test_FFTModule.lua  test_FeatureLPPooling.lua  test_GroupKMaxPooling.lua  test_HSM.lua  test_HSM_cuda.lua  test_HSM_speed.lua  test_KMaxPooling.lua  test_LinearNB.lua  test_LocallyConnected.lua  test_LookupTableGPU.lua  test_ModelParallel.lua  test_OneBitDataParallel.lua  test_OneBitQuantization.lua  (+15 more)
(+148 files in other folders)
